# TinKer64

./: .gitignore  CMakeLists.txt  README.md  iso.sh  limine.cfg
arch/: CMakeLists.txt
arch/x86_64/boot/: CMakeLists.txt  linker.ld
kernel/: CMakeLists.txt  kernel_main.c
